--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,7 @@ aside {
   .product-detail-close:hover {
     cursor: pointer;
   }
-  #productDetail > img:nth-child(2) {
+  #productDetail > img/* :nth-child(2) */ {
     width: 100%;
     height: 360px;
     object-fit: cover;
